@@ -347,6 +347,7 @@ FHEM/98_PID20.pm             John                 http://forum.fhem.de Automatis
 FHEM/98_RandomTimer.pm       dietmar63            http://forum.fhem.de Unterstuetzende Dienste/Kalendermodule
 FHEM/98_SVG.pm               rudolfkoenig         http://forum.fhem.de Frontends/SVG/Plots/logProxy
 FHEM/98_THRESHOLD.pm         damian-s             http://forum.fhem.de Automatisierung
+FHEM/98_TRAFFIC.pm           jmike                http://forum.fhem.de Unterstuetzende Dienste
 FHEM/98_UbiquitiPM.pm        Wzut                 http://forum.fhem.de Sonstige Systeme
 FHEM/98_UbiquitiOut.pm       Wzut                 http://forum.fhem.de Sonstige Systeme
 FHEM/98_WeekdayTimer.pm      dietmar63            http://forum.fhem.de Unterstuetzende Dienste
